# cbdb_mcp

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  ai_table_query.py  community_article.md  natural_query_parser.py  pyproject.toml
.cursor/rules/: cbdbmcp.mdc
.windsurf/rules/: mcp-guide.md
config/: __init__.py  settings.py
ref/: python-sdk.md
src/: __init__.py  server.py
src/database/: __init__.py  connection.py  operations.py
src/handlers/: __init__.py  database.py
src/mcp/: prompts.py  router.py
src/utils/: logger.py
tests/: __init__.py
