[project]
name = "cloudberry-mcp"
version = "1.0.0"
description = "Cloudberry Database MCP Server"
authors = [
    { name = "Vance Chen", email = "vance@example.com" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "mcp",
    "psycopg2-binary",
    "pydantic-settings",
    "structlog",
    "cryptography",
    "requests",
    "python-dotenv",
]
requires-python = ">=3.10"

[project.scripts]
cloudberry-mcp = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src", "config"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 